# Минимальная версия
cmake_minimum_required (VERSION 3.16)

set(NCUB_NAME newcub)
project(${NCUB_NAME})

# Поддержка модулей
# 	модули лежат в папке cmake/
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")

################################################################
# Подключение констант с описанием
################################################################
find_package(Description REQUIRED)
message(STATUS "${NCUB_DESCRIPTION_CONNECT}")

# Вывод логотипа
message(STATUS "${NCUB_DESCRIPTION_LOGO}")

################################################################
# Подключение констант проекта
################################################################
find_package(Constants REQUIRED)

################################################################
# Подключение библиотек
################################################################
find_package(Lib REQUIRED)

################################################################
# Подключение субпроектов
################################################################
find_package(Src REQUIRED)

################################################################
# Параметры сборки
################################################################
find_package(Build REQUIRED)

################################################################
# Параметры компилятора
################################################################
find_package(Compiler REQUIRED)